# DSO

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_ros.sh
ROS/DSO/: CMakeLists.txt  manifest.xml
ROS/DSO/src/: main_dso_ros.cc
src/: main_dso_pangolin.cpp
src/FullSystem/: CoarseInitializer.cpp
src/IOWrapper/Pangolin/: KeyFrameDisplay.cpp  KeyFrameDisplay.h  PangolinDSOViewer.cpp
src/OptimizationBackend/: EnergyFunctional.cpp  EnergyFunctionalStructs.cpp  MatrixAccumulators.h
src/util/: DatasetReader.h  Undistort.cpp  Undistort.h
